# Pubmedsoso

./: .gitignore  README.md  pyproject.toml
data/: pubmed_20260413084132.db  pubmed_20260413095128.db  pubmed_20260413144813.db  pubmed_20260413150612.db  pubmed_20260413152229.db  pubmed_20260413153039.db  pubmed_20260413155832.db  pubmed_20260413155841.db  pubmedsoso.db
docs/superpowers/plans/: 2026-04-12-pubmedsoso-rewrite.md
docs/superpowers/specs/: 2026-04-12-pubmedsoso-rewrite-design.md
src/pubmedsoso/: __init__.py  config.py  main.py  models.py
src/pubmedsoso/cli/: commands.py
src/pubmedsoso/core/: detail.py  download.py  export.py  rank.py  search.py
src/pubmedsoso/db/: database.py  repository.py
src/pubmedsoso/web/: app.py  routes.py  schemas.py
src/pubmedsoso/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_config.py  test_database.py  test_detail.py  test_download.py  test_export.py  test_integration.py  test_models.py  test_rank.py  test_repository.py  test_search.py
tests/fixtures/: detail_page.html  search_page.html  search_page.xml
